# dengue-climate-nepal

./: .gitignore  README.md  config.yaml  dengue_climate_nepal_revised_plan.md  main.py  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py
data/interim/: climate_missing_refetch.csv
data/raw/dengue/: opendengue_nepal.csv
data/raw/reference/: district_elevation.csv
notebooks/: 01_eda.ipynb  02_lag.ipynb  03_model.ipynb
outputs/tables/: lag_best.csv  model_coefficients.csv  panel_summary.csv
reports/: eda_findings.md  final_report.md
src/dengue_climate/: __init__.py  build_panel.py  config.py
src/dengue_climate/analysis/: __init__.py  crosscorr.py  eda.py  models.py
src/dengue_climate/data/: __init__.py  aggregate_climate.py  fetch_elevation.py  fetch_missing_climate.py  normalize_names.py  read_opendengue.py
src/dengue_climate/viz/: plots.py
