[project]
name = "dengue-climate-nepal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dengue_climate"]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
